# OptimizeMPI.jl

./: .gitignore  CMakeLists.txt  README.md  calling_a_parallel_code.ipynb  calling_a_parallel_code.tex  hands_on.ipynb  par_error.f90  scr_optim.jl  test_optim.jl
examples/: addTwoF.f90  changeArray.c  hello_world.jl
heat/: .gitignore  CMakeLists.txt  asserts.f90  cluster_optim.jl  communications.f90  heat.f90  heat_hl.jl  heat_main.f90  heat_par.jl  heat_seq.jl  heat_solve.f90  mat_utils.f90  parse_tests_file.cmake  scr_optim.jl  test_heat.f90
poster/: calling_a_parallel_code.ipynb
squared_norm/: cluster_optim.jl  par_error.f90  scr_optim.jl  test_optim.jl
src/: heat_hl.jl
