cmake_minimum_required (VERSION 3.0)
project (heat_optim)
enable_language(Fortran)

# Check whether MPI support is available.
find_package(MPI)
include(parse_tests_file.cmake)

if (MPI_FOUND)
  message(STATUS "modules = ${MPI_Fortran_HAVE_F90_MODULE} ${MPI_Fortran_HAVE_F08_MODULE} ${MPI_Fortran_MODULE_DIR} ")
  message(STATUS "MPI found")
  include_directories(${MPI_INCLUDE_PATH})
  include_directories(${MPI_Fortran_MODULE_DIR})
  add_library(heat_solve SHARED heat_solve.f90 communications.f90 heat.f90 asserts.f90)
  target_link_libraries(heat_solve ${MPI_Fortran_LIBRARIES})
  install(TARGETS heat_solve DESTINATION ${CMAKE_SOURCE_DIR})
  add_executable(heat_exe heat_main.f90 heat_solve.f90 communications.f90 heat.f90)
  target_link_libraries(heat_exe ${MPI_Fortran_LIBRARIES})
  install(TARGETS heat_exe DESTINATION ${CMAKE_SOURCE_DIR})
  parse_tests_file(test_heat.f90 "heat_solve" 9)
else(MPI_FOUND)
    message(FATAL_ERROR "MPI not found; you NEED it to compile the project")
endif(MPI_FOUND)
